--- a/chromeExtension/manifest.json
+++ b/chromeExtension/manifest.json
@@ -18,7 +18,7 @@
     "content_scripts": [
         {
           "matches": ["https://leetcode.com/questions/*"],
-          "js": ["script.js", "content.js"]
+          "js": ["script.js"]
         }
     ],
     "permissions": [
