--- a/deprecate/manifest.json
+++ b/deprecate/manifest.json
@@ -18,7 +18,8 @@
     "content_scripts": [
         {
           "matches": ["https://leetcode.com/questions/*"],
-          "js": ["script.js"]
+          "js": ["script.js"],
+          "css": ["content-script/github-markdown.css"]
         }
     ],
     "permissions": [
