--- a/my-extension/package.json
+++ b/my-extension/package.json
@@ -17,5 +17,9 @@
     "webpack": "^5.75.0",
     "webpack-cli": "^4.10.0",
     "webpack-merge": "^5.8.0"
+  },
+  "dependencies": {
+    "incremental-dom": "^0.7.0",
+    "typewriter-effect": "^2.19.0"
   }
 }
